--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,22 @@
         "regex": "cpp",
         "valarray": "cpp",
         "iosfwd": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "any": "c",
+        "*.tcc": "c",
+        "memory": "c",
+        "optional": "c",
+        "fstream": "c",
+        "future": "c",
+        "istream": "c",
+        "ostream": "c",
+        "shared_mutex": "c",
+        "sstream": "c",
+        "streambuf": "c",
+        "thread": "c",
+        "functional": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "variant": "c"
     }
 }
