--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "functional": "c",
         "tuple": "c",
         "type_traits": "c",
-        "variant": "c"
+        "variant": "c",
+        "cmath": "cpp"
     }
 }
