--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,8 @@
         "tuple": "c",
         "type_traits": "c",
         "variant": "c",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "JK.C": "cpp",
+        "typeinfo": "cpp"
     }
 }
